<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SchätzIt Manager</string>
    <string name="matching_persons">Gefundene Personen</string>
    <string name="addSchaetzung">Schätzung speichern</string>
    <string name="letzte_schaetzungen">letzte Schätzungen</string>
    <string name="action_import_persons">Personen importieren</string>
    <string name="hello_world">Hello world!</string>
    <string name="schaetzer_ref_hint">Name und Adresse des Schätzers</string>
    <string name="schaetzer_ref">Schätzer</string>
    <string name="action_reset_schaetzungen">Schätzungen zurücksetzen</string>
    <string name="action_choose_operator">Benutzer auswählen</string>
</resources>