<TableLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:shrinkColumns="*" 
            android:stretchColumns="*">

                        <!-- Row 1 with 2 columns -->

                        <TableRow
                            android:layout_height="wrap_content"
                            android:layout_width="fill_parent"
                            android:gravity="center_horizontal">
                            
                          <LinearLayout
                                android:id="@+id/schaetzer"
                                android:orientation="vertical"
                                android:layout_weight="1"  
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                        >
                            <!-- column 1 -->
                            <TextView
                              android:layout_width="fill_parent"
                              android:layout_height="wrap_content" android:padding="10dp"
                              android:text="@string/schaetzer_ref" android:textSize="20sp" />

                             <EditText android:id="@+id/schaetzerRef" android:layout_width="match_parent"
                              android:layout_height="wrap_content" android:ems="10"
                              android:hint="@string/schaetzer_ref_hint">
                              <requestFocus />
                             </EditText>
                            
                            <LinearLayout
                               android:id="@+id/schaetzwerte"
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"
                               android:orientation="vertical"
                               >
                            
                              <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:orientation="horizontal"
                                 android:weightSum="3"
                                 >
                                <EditText android:id="@+id/schaetzung01"
                                          style="@style/SchaetzwertInput"
                                  > 
                                 </EditText>
                                <EditText android:id="@+id/schaetzung02" 
                                          style="@style/SchaetzwertInput"
                                  > 
                                 </EditText>
                                <EditText android:id="@+id/schaetzung03"
                                          style="@style/SchaetzwertInput"
                                  > 
                                 </EditText>
                              </LinearLayout>
                              <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:orientation="horizontal"
                                 android:weightSum="3"
                                 >
                                <EditText android:id="@+id/schaetzung04"
                                          style="@style/SchaetzwertInput"
                                  > 
                                 </EditText>
                                <EditText android:id="@+id/schaetzung05" 
                                          style="@style/SchaetzwertInput"
                                  > 
                                 </EditText>
                                <EditText android:id="@+id/schaetzung06"
                                          style="@style/SchaetzwertInput"
                                  > 
                                 </EditText>
                              </LinearLayout>
                              <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:orientation="horizontal"
                                 android:weightSum="3"
                                 >
                                <EditText android:id="@+id/schaetzung07"
                                          style="@style/SchaetzwertInput"
                                  > 
                                 </EditText>
                                <EditText android:id="@+id/schaetzung08" 
                                          style="@style/SchaetzwertInput"
                                  > 
                                 </EditText>
                                <EditText android:id="@+id/schaetzung09"
                                          style="@style/SchaetzwertInput"
                                  > 
                                 </EditText>
                              </LinearLayout>
                              <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:orientation="horizontal"
                                 android:weightSum="3"
                                 >
                                <EditText android:id="@+id/schaetzung10"
                                          style="@style/SchaetzwertInput"
                                  > 
                                 </EditText>
                              </LinearLayout>
                            </LinearLayout>
                            
                             <Button
                                android:id="@+id/addSchaetzungButton"
                                android:onClick="addSchaetzung"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/addSchaetzung" />
                            
                            <TextView
                                      android:text="@string/letzte_schaetzungen"
                                      android:layout_width="match_parent"
                                      android:layout_height="wrap_content"
                                      />
                            <ListView
                                      android:id="@+id/listNeuesteSchaetzungen"
                                      android:layout_width="match_parent"
                                      android:scrollbars="vertical"
                                      android:layout_height="200dip"
                                      android:background="@drawable/border_ui"
                                      >
                            </ListView>
                          </LinearLayout>
                          <LinearLayout
                                android:orientation="vertical"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"  
                                android:gravity="center"
                                        >
                            <!-- column2 -->
                            <TextView
                                      android:text="@string/matching_persons"
                                      android:layout_width="fill_parent"
                                      android:layout_height="wrap_content"
                                      />
                            <ListView
                                 android:id="@+id/matching_persons"
                                 android:layout_width="fill_parent"
                                 android:layout_height="fill_parent" />
                          </LinearLayout>
                        </TableRow>
                         
      </TableLayout>